@@ -2,6 +2,7 @@ hildon-home (0.3.5~unreleased) unstable; urgency=low
 
   * Only draw thumbnail icon if available. Fixes NB#96683
   * Monitor bookmark configurations file. Fixes NB#95283
+  * Background image of only current home view is changed. Fixes NB#96380
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 Dec 2008 15:46:33 +0200
 
